@@ -7,32 +7,32 @@
 #endif
 #if defined (DUMP)
 static const char sccsid[] USED =
-	"@(#)/usr/ucb/otfdump.sl	7.11 (gritter) 7/29/06";
+	"@(#)/usr/ucb/otfdump.sl	7.12 (gritter) 7/29/06";
 #elif defined (DPOST)
-static const char sccsid[] USED = "@(#)dpost.sl  7.11 (gritter) 7/29/06";
-const char creator[] = "Heirloom Documentation Tools - dpost 7.11 (gritter) 7/29/06";
+static const char sccsid[] USED = "@(#)dpost.sl  7.12 (gritter) 7/29/06";
+const char creator[] = "Heirloom Documentation Tools - dpost 7.12 (gritter) 7/29/06";
 #elif defined (NROFF)
-static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.11 (gritter) 7/29/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/nroff.sl	7.12 (gritter) 7/29/06";
 #else	/* !DUMP, !NROFF */
-static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.11 (gritter) 7/29/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/troff.sl	7.12 (gritter) 7/29/06";
 #endif	/* !DUMP, !NROFF */
-const char revision[] = "7.11";
+const char revision[] = "7.12";
 /* SLIST */
 /*
-ext.h: * Sccsid @(#)ext.h	1.57 (gritter) 7/23/06
+ext.h: * Sccsid @(#)ext.h	1.58 (gritter) 7/29/06
 hytab.c: * Sccsid @(#)hytab.c	1.4 (gritter) 8/16/05
-n1.c: * Sccsid @(#)n1.c	1.86 (gritter) 7/29/06
+n1.c: * Sccsid @(#)n1.c	1.87 (gritter) 7/29/06
 n2.c: * Sccsid @(#)n2.c	1.24 (gritter) 7/23/06
-n3.c: * Sccsid @(#)n3.c	1.109 (gritter) 7/23/06
+n3.c: * Sccsid @(#)n3.c	1.110 (gritter) 7/29/06
 n4.c: * Sccsid @(#)n4.c	1.35 (gritter) 7/17/06
-n5.c: * Sccsid @(#)n5.c	1.55 (gritter) 7/23/06
+n5.c: * Sccsid @(#)n5.c	1.56 (gritter) 7/29/06
 n7.c: * Sccsid @(#)n7.c	1.78 (gritter) 7/23/06
 n8.c: * Sccsid @(#)n8.c	1.28 (gritter) 7/4/06
-n9.c: * Sccsid @(#)n9.c	1.48 (gritter) 7/19/06
+n9.c: * Sccsid @(#)n9.c	1.49 (gritter) 7/29/06
 ni.c: * Sccsid @(#)ni.c	1.31 (gritter) 7/17/06
-nii.c: * Sccsid @(#)nii.c	1.36 (gritter) 7/23/06
+nii.c: * Sccsid @(#)nii.c	1.37 (gritter) 7/29/06
 suftab.c: * Sccsid @(#)suftab.c	1.4 (gritter) 8/16/05
-tdef.h: * Sccsid @(#)tdef.h	1.97 (gritter) 7/29/06
+tdef.h: * Sccsid @(#)tdef.h	1.98 (gritter) 7/29/06
 nroff.d/n10.c: * Sccsid @(#)n10.c	1.27 (gritter) 7/19/06
 nroff.d/n6.c: * Sccsid @(#)n6.c	1.40 (gritter) 7/19/06
 nroff.d/pt.h: *	Sccsid @(#)pt.h	1.39 (gritter) 7/11/06
